Allowing all links to work, not just targeting "confirm match"

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <input type="text" id="scanValue" placeholder="Scan Value" autocomplete="off" value="">
                     </div>
                     <div class="col-2">
-                        <a href="#">Confirm Match</a>
+                        <a href="#" id="confirm">Confirm Match</a>
                     </div>
                 </div>
                 <ul id="history"></ul>
